started seperating hardcoded stat types in statscore